<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|clip_vertical"
    android:background="@color/green_shade_1"
    tools:context=".AddItemActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/textInputLayout"
            android:layout_width="398dp"
            android:layout_height="66dp"

            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:hint="@string/enter_item_name"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/addItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:layout_constraintVertical_bias="0.169">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/ItemName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:id="@+id/textInputLayout2"
            android:layout_width="398dp"
            android:layout_height="66dp"

            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:hint="@string/enter_item_price"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.518">

            <com.google.android.material.textfield.TextInputEditText


                android:id="@+id/ItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:inputType="number"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="398dp"
            android:layout_height="66dp"


            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:hint="@string/item_suitable_for"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/addItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.211">

            <com.google.android.material.textfield.TextInputEditText


                android:id="@+id/suitable"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"

                android:layout_marginEnd="28dp"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="398dp"
            android:layout_height="66dp"


            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:hint="Https Image Link"
            app:hintTextColor="@android:color/transparent"
            app:layout_constraintBottom_toTopOf="@+id/addItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:layout_constraintVertical_bias="0.211">

            <com.google.android.material.textfield.TextInputEditText


                android:id="@+id/url"
                android:layout_width="match_parent"


                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"

                android:layout_marginEnd="28dp"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="398dp"
            android:layout_height="66dp"


            android:layout_marginBottom="28dp"
            android:gravity="center"

            android:hint="Https ItemLink"
            app:hintTextColor="@android:color/transparent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintVertical_bias="0.211">

            <com.google.android.material.textfield.TextInputEditText


                android:id="@+id/itemLink"


                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginStart="28dp"
                android:layout_marginEnd="28dp"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout


            android:layout_width="398dp"
            android:layout_height="66dp"

            android:layout_marginBottom="35dp"
            android:gravity="center"

            android:hint="@string/add_item_description"

            app:hintTextColor="@android:color/transparent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintVertical_bias="0.518">

            <com.google.android.material.textfield.TextInputEditText


                android:id="@+id/descItem"
                android:layout_width="match_parent"


                android:layout_height="match_parent"
                android:layout_marginStart="28dp"

                android:layout_marginEnd="28dp"
                android:inputType="text"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button

            android:id="@+id/addItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"

            android:layout_marginEnd="28dp"
            android:text="@string/additem"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.997"
            app:rippleColor="@color/green_shade_1" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>